--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.8.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
-    "react-select": "^5.7.3"
+    "react-select": "^5.7.3",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
