--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
