--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.3",
-    "recharts": "^2.6.2",
-    "regression": "^2.0.1"
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
